created ipad setup in location
