# apps/base-cloud/docs/autogenerated-swagger.json
@@ -59,24 +59,6 @@
     }
    }
   },
-  "/v1/location-routes/all-locations": {
-   "get": {
-    "responses": {
-     "200": {
-      "description": "Default Response"
-     }
-    }
-   }
-  },
-  "/v1/location-routes/location-by-country/{countryId}": {
-   "get": {
-    "responses": {
-     "200": {
-      "description": "Default Response"
-     }
-    }
-   }
-  },
   "/v1/gate-routes/gate-user/{userId}": {
    "get": {
     "responses": {
@@ -95,8 +77,35 @@
     }
    }
   },
+  "/v1/location-routes/all-locations": {
+   "get": {
+    "responses": {
+     "200": {
+      "description": "Default Response"
+     }
+    }
+   }
+  },
+  "/v1/location-routes/location-by-country/{countryId}": {
+   "get": {
+    "responses": {
+     "200": {
+      "description": "Default Response"
+     }
+    }
+   }
+  },
   "/v1/device-routes/all-device-types": {
    "get": {
+    "responses": {
+     "200": {
+      "description": "Default Response"
+     }
+    }
+   }
+  },
+  "/v1/device-routes/create-device": {
+   "post": {
     "responses": {
      "200": {
       "description": "Default Response"
